--- a/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RecipeBook.Web.ViewModels.Home.SearchViewModel
 
 @{
-    
+
     int elCount = Model.ResultItems.Count();
     if (elCount != 0)
     {
@@ -20,21 +20,27 @@
                             <h5 class="mt-0 mb-1"><a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">@item.Name</a></h5>
                             <p class="mt-0 mb-1 text-muted">Last cooked: @item.LastCookedDays days</p>
                         </div>
-                        <div class="col-3">
-                            <button type="button" class="btn btn-sm btn-success rounded-pill" onclick=homeSearchViewHelper.OnSearchCookedTodayClick('@item.Id')><i class="fas fa-check-circle"></i>Cooked Today</button>
+                        <div class="col-2">
+                            <button type="button" class="btn btn-sm btn-success rounded-pill" onclick=homeSearchViewHelper.OnCookedTodayClick('@item.Id')><i class="fas fa-check-circle"></i>Cooked Today</button>
                         </div>
                         @if (item.IsInMenu)
                         {
-                            <div class="col-3">
-                                <button type="button" class="btn btn-sm btn-danger rounded-pill" id='MenuButton_@item.Id' data-value="false" onclick= homeSearchViewHelper.OnMenuClick('@item.Id')><i class="fas fa-minus-circle"></i>Menu</button>
+                            <div class="col-2">
+                                <button type="button" class="btn btn-sm btn-danger rounded-pill" id='MenuButton_@item.Id' data-value="false" onclick=homeSearchViewHelper.OnMenuClick('@item.Id')><i class="fas fa-minus-circle"></i>Menu</button>
                             </div>
                         }
                         else
                         {
-                            <div class="col-3">
+                            <div class="col-2">
                                 <button type="button" class="btn btn-sm btn-success rounded-pill" id='MenuButton_@item.Id' data-value="true" onclick=homeSearchViewHelper.OnMenuClick('@item.Id')><i class="fas fa-plus-circle"></i>Menu</button>
                             </div>
                         }
+                        <div class="col-2">
+                            <button type="submit" class="btn btn-sm btn-danger rounded-pill" id='DeleteButton_@item.Id'
+                                    onclick="homeSearchViewHelper.OnDelete('@item.Id', '@item.Name')">
+                                <i class="fas fa-trash-alt"></i>Delete
+                            </button>
+                        </div>
                     </div>
                     <div class='rating-stars mb-0 mt-0' title="Taste:">
                         <ul id='TasteRateStars' data-value='@item.Id,@item.TasteRate'>
