--- a/src/Web/RecipeBook.Web/Views/Ingredients/IndexResultList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Ingredients/IndexResultList.cshtml
@@ -13,10 +13,26 @@
                 <img class="align-self-center mr-3" src=@currentImageSource asp-append-version="true"
                      title=@item.Name width="100" height="100">
                 <div class="media-body mr-3">
-                    <h5 class="mt-0 mb-1"><a asp-controller="Ingredients" asp-action="Details" asp-route-id="@item.Id">@item.Name</a></h5>                    
-                    <p class="text-justify text-truncate" style="max-width: 200px;">
-                        @item.IngredientType.Name
-                    </p>
+                    <div class="row">
+                        <div class="col-9">
+                            <h5 class="mt-0 mb-1"><a asp-controller="Ingredients" asp-action="Details" asp-route-id="@item.Id">@item.Name</a></h5>
+                            <p class="text-justify text-truncate" style="max-width: 200px;">
+                                @item.IngredientType.Name
+                            </p>
+                        </div>
+                        <div class="col-3">
+                            <form asp-controller="Ingredients" method="Post" onclick="return confirm('Are you sure you want ot delete @item.Name ingredient ?')">
+                                <input asp-for=@Model.SearchData.Text class="form-control" type="hidden" />
+                                <input asp-for=@Model.SearchData.Mode class="form-control" type="hidden" />
+                                <input asp-for=@Model.SearchData.Ingredients class="form-control" type="hidden" />
+                                <input asp-for=@Model.SearchData.RecipeTypes class="form-control" type="hidden" />
+
+                                <button asp-action="Delete" asp-route-id="@item.Id" type="submit" class="btn btn-sm btn-danger rounded-pill" id='DeleteButton_@item.Id'>
+                                    <i class="fas fa-trash-alt"></i>Delete
+                                </button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </li>
 
