--- a/src/Web/RecipeBook.Web/Views/Shared/Components/SideBarFilter/Default.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Shared/Components/SideBarFilter/Default.cshtml
@@ -60,7 +60,7 @@
                     @foreach (var item in Model.IngredientTypes)
                     {
                         <label class="form-check" data-toggle="collapse" data-target="#@item.Id" aria-expanded="true" aria-controls=@item.Id>
-                            <input class="form-check-input" type="checkbox" value="" name="Ingr_Type_Checkbox_+ @item.Name">
+                            <input class="form-check-input" type="checkbox" value="" name="Ingr_Type_Checkbox_+ @item.Name" checked="@item.Checked">
                             <span class="form-check-label">
                                 @item.Name
                             </span>
@@ -69,7 +69,7 @@
                             @foreach (var ingr in item.Ingredients)
                             {
                                 <label class="form-check ml-2">
-                                    <input class="form-check-input" type="checkbox" value="" onclick="" id='@ingr.Id' name='Ingr_Checkbox_+ @ingr.Name'>
+                                    <input class="form-check-input" type="checkbox" value="" onclick="" id='@ingr.Id' checked="@item.Checked" name='Ingr_Checkbox_+ @ingr.Name'>
                                     <span class="form-check-label">
                                         @ingr.Name
                                     </span>
