--- a/src/Web/RecipeBook.Web/Views/Shared/Components/SideBarFilter/Default.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Shared/Components/SideBarFilter/Default.cshtml
@@ -65,17 +65,34 @@
                                 @item.Name
                             </span>
                         </label>
-                        <div class="collapse" id=@item.Id>
-                            @foreach (var ingr in item.Ingredients)
-                            {
-                                <label class="form-check ml-2">
-                                    <input class="form-check-input" type="checkbox" value="" onclick="" id='@ingr.Id' checked="@item.Checked" name='Ingr_Checkbox_+ @ingr.Name'>
-                                    <span class="form-check-label">
-                                        @ingr.Name
-                                    </span>
-                                </label>
-                            }
-                        </div>
+                        @if (@item.Checked)
+                        {
+                            <div class="collapse show" id=@item.Id>
+                                @foreach (var ingr in item.Ingredients)
+                                {
+                                    <label class="form-check ml-2">
+                                        <input class="form-check-input" type="checkbox" value="" onclick="" id='@ingr.Id' checked="@ingr.Checked" name='Ingr_Checkbox_+ @ingr.Name'>
+                                        <span class="form-check-label">
+                                            @ingr.Name
+                                        </span>
+                                    </label>
+                                }
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="collapse" id=@item.Id>
+                                @foreach (var ingr in item.Ingredients)
+                                {
+                                    <label class="form-check ml-2">
+                                        <input class="form-check-input" type="checkbox" value="" onclick="" id='@ingr.Id' checked="@ingr.Checked" name='Ingr_Checkbox_+ @ingr.Name'>
+                                        <span class="form-check-label">
+                                            @ingr.Name
+                                        </span>
+                                    </label>
+                                }
+                            </div>
+                        }
                     }
                 </form>
             </div>
